CHANGES
*******

0.2 (unreleased)
================

* ...

0.1 (2008-12-05)
================

* Initial public release.